samples/_failures_safe/1761498575_8973a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03b41cbe.c: In function ‘main’:
./samples/SAFE/__tmp_03b41cbe.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("\n");
      |     ^~~~~~
